--- a/eden1.html
+++ b/eden1.html
@@ -4,7 +4,23 @@
   <meta charset="UTF-8">
   <title>אתר בסיסי</title>
 </head>
+<link
 <body>
-  אהלןן מה המצב
+  <h1לחמניות שום רכות
+מצרכים:
+500 גרם קמח לבן
+1 כף (12 גרם) שמרים יבשים או 35 גרם שמרים טריים
+3 כפות (30 גרם) סוכר
+1 ו-1/4 כוסות (300 מ”ל) מים
+4 כפות שמן זית
+כפית שטוחה פלפל שחור
+כף מלח
+
+לקונפי שום:
+8-10 שיני שום קלופות
+1/2 כוס שמן זית (אפשר גם 1/3 כוס, העיקר שהשמן יכסה את שיני השום)
+עלים מענף רוזמרין או טימין – לא חובה
+
+
 </body>
 </html>
