--- a/eden1.html
+++ b/eden1.html
@@ -8,30 +8,41 @@
 <body>
 <h1>לחמניות שום רכות</h1>
 <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-<h2>מצרכים</h2>
-500 גרם קמח לבן
-1 כף (12 גרם) שמרים יבשים או 35 גרם שמרים טריים
-3 כפות (30 גרם) סוכר
-1 ו-1/4 כוסות (300 מ”ל) מים
-4 כפות שמן זית
-כפית שטוחה פלפל שחור
-כף מלח
 
-<h2>קונפי שום</h2>
-8-10 שיני שום קלופות
-1/2 כוס שמן זית (אפשר גם 1/3 כוס, העיקר שהשמן יכסה את שיני השום)
-עלים מענף רוזמרין או טימין – לא חובה
-<h2>אופן ההכנה</h2>
+<h2>רכיבים</h2>
+<ul>
+  <li>500 גרם קמח לבן</li>
+  <li>כף שמרים יבשים</li>
+  <li>3 כפות סוכר</li>
+  <li>1 1\4 כוס מים</li>
+  <li>30 גרם שמן זית</li>
+  <li>כף מלח</li>
+</ul>
+<h2>לקונפי שום</h2>
+<li>8-10 שיני שום קלופות</li>
+  <li>חצי כוס שמן זית</li>
+  <li>כמה עלי טימין או רוזמרין</li>
+  <h2>שלבי ההכנה</h2>
+  <img src=bread%203.jpg
+  
+<ol>
+  <li> מכינים קונפי שום: בסיר קטן שמים שמן זית, שיני שום ורוזמרין או טימין ומבשלים על אש קטנה (אבל הכי קטנה) עד שהשום מתרכך לגמרי אבל לא מזהיב מטיגון, זה לא אמור להיות טיגון אלא בישול על אש קטנטנה. מצננים לטמפרטורת החדר.</li>
+  <li> בקערת מיקסר עם וו לישה מניחים את כל מצרכי הבצק פרט למלח, מערבלים על מהירות איטית במשך 5 דקות. מוסיפים את המלח ואת שיני השום שהתקררו וממשיכים ללוש את הבצק עוד 5-7 דקות. זה בסדר אם הבצק יוצא דביק. </li>
+  <li>מכסים במגבת ומתפיחים שעה בחוץ או למשך הלילה במקרר (עדיף להתפיח במקרר כי הבצק מעט דביק אבל אפשר לעבוד איתו גם אחרי התפחה בחוץ).</li>
+  <li>מחלקים את הבצק ל-12 עד 16 חתיכות שוות במשקלן, תלוי באיזה גודל אתם רוצים את הלחמניות. משטחים כל כדור בצק על שיש משומן מעט ומגלגלים למעין רולדה. מרדדים את הרולדה לרצועה שמנמנה ומניחים על תבנית עם נייר אפייה. אם רוצים, אפשר ליצור רצועה דקה יותר (ואז עדיף לקמח את הבצק ולא לשמן) ואיתה להכין לחמניות קשר או לחמניות שמונה או לחמניות עגולות. מה שתרצו.</li>
+  <li>מכסים את הלחמניות עם מגבת או ניילון ומניחים להן לתפוח במשך שעה ורבע (בחורף) או 40 דקות (בקיץ).</li>
+  <li>מחממים תנור ל-180 מעלות.
+</li>
+  <li> מברישים את הלחמניות בביצה מהולה במים ומפזרים מלח גס.</li>
+  
+  <li>אופים במשך 20 דקות או עד שהלחמניות זהובות.</li>
+  <li>בינתיים מערבבים בקערה שמן זית/חמאה עם אבקת שום ועירית או פטרוזיליה קצוצים דק,
+ מיד כשהלחמניות יוצאות מהתנור מברישים אותן בשמן המתובל ומאפשרים להן להתקרר לפני שזוללים.
 
-– מכינים קונפי שום: בסיר קטן שמים שמן זית, שיני שום ורוזמרין או טימין ומבשלים על אש קטנה (אבל הכי קטנה) עד שהשום מתרכך לגמרי אבל לא מזהיב מטיגון, זה לא אמור להיות טיגון אלא בישול על אש קטנטנה. מצננים לטמפרטורת החדר.
-– בקערת מיקסר עם וו לישה מניחים את כל מצרכי הבצק פרט למלח, מערבלים על מהירות איטית במשך 5 דקות. מוסיפים את המלח ואת שיני השום שהתקררו וממשיכים ללוש את הבצק עוד 5-7 דקות. זה בסדר אם הבצק יוצא דביק.
-– מכסים במגבת ומתפיחים שעה בחוץ או למשך הלילה במקרר (עדיף להתפיח במקרר כי הבצק מעט דביק אבל אפשר לעבוד איתו גם אחרי התפחה בחוץ).
-– מחלקים את הבצק ל-12 עד 16 חתיכות שוות במשקלן, תלוי באיזה גודל אתם רוצים את הלחמניות. משטחים כל כדור בצק על שיש משומן מעט ומגלגלים למעין רולדה. מרדדים את הרולדה לרצועה שמנמנה ומניחים על תבנית עם נייר אפייה. אם רוצים, אפשר ליצור רצועה דקה יותר (ואז עדיף לקמח את הבצק ולא לשמן) ואיתה להכין לחמניות קשר או לחמניות שמונה או לחמניות עגולות. מה שתרצו. אה, וגם חלה. יו – חלת שום!
-– מכסים את הלחמניות עם מגבת או ניילון ומניחים להן לתפוח במשך שעה ורבע (בחורף) או 40 דקות (בקיץ).
-– מחממים תנור ל-180 מעלות.
-– מברישים את הלחמניות בביצה מהולה במים ומפזרים מלח גס.
-– אופים במשך 20 דקות או עד שהלחמניות זהובות.
-– בינתיים מערבבים בקערה שמן זית/חמאה עם אבקת שום ועירית או פטרוזיליה קצוצים דק.
-– מיד כשהלחמניות יוצאות מהתנור מברישים אותן בשמן המתובל ומאפשרים להן להתקרר לפני שזוללים.
+</li>
+  <li>בתיאבון!</li>
+  <img src=bread%202.jpg
+</ol> 
+<img src=bread.jpg
 </body>
 </html>
