--- a/eden1.html
+++ b/eden1.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
+
 <head>
-  <meta charset="UTF-8">
-  <title>אתר בסיסי</title>
-  <link rel="stylesheet" href="try.css">
+    <meta charset="UTF-8">
+    <title>אתר בסיסי</title>
+    <link rel="stylesheet" href="try.css">
 </head>
+
 <body>
-<h1>לחמניות שום רכות</h1>
-<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <div class="container">
+        <h1>לחמניות שום רכות</h1>
+        <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
-<h2>רכיבים</h2>
-<ul>
-  <li>500 גרם קמח לבן</li>
-  <li>כף שמרים יבשים</li>
-  <li>3 כפות סוכר</li>
-  <li>1 1\4 כוס מים</li>
-  <li>30 גרם שמן זית</li>
-  <li>כף מלח</li>
-</ul>
-<h2>לקונפי שום</h2>
-<li>8-10 שיני שום קלופות</li>
-  <li>חצי כוס שמן זית</li>
-  <li>כמה עלי טימין או רוזמרין</li>
-  <h2>שלבי ההכנה</h2>
-  <img src=bread%203.jpg
-  
-<ol>
-  <li> מכינים קונפי שום: בסיר קטן שמים שמן זית, שיני שום ורוזמרין או טימין ומבשלים על אש קטנה (אבל הכי קטנה) עד שהשום מתרכך לגמרי אבל לא מזהיב מטיגון, זה לא אמור להיות טיגון אלא בישול על אש קטנטנה. מצננים לטמפרטורת החדר.</li>
-  <li> בקערת מיקסר עם וו לישה מניחים את כל מצרכי הבצק פרט למלח, מערבלים על מהירות איטית במשך 5 דקות. מוסיפים את המלח ואת שיני השום שהתקררו וממשיכים ללוש את הבצק עוד 5-7 דקות. זה בסדר אם הבצק יוצא דביק. </li>
-  <li>מכסים במגבת ומתפיחים שעה בחוץ או למשך הלילה במקרר (עדיף להתפיח במקרר כי הבצק מעט דביק אבל אפשר לעבוד איתו גם אחרי התפחה בחוץ).</li>
-  <li>מחלקים את הבצק ל-12 עד 16 חתיכות שוות במשקלן, תלוי באיזה גודל אתם רוצים את הלחמניות. משטחים כל כדור בצק על שיש משומן מעט ומגלגלים למעין רולדה. מרדדים את הרולדה לרצועה שמנמנה ומניחים על תבנית עם נייר אפייה. אם רוצים, אפשר ליצור רצועה דקה יותר (ואז עדיף לקמח את הבצק ולא לשמן) ואיתה להכין לחמניות קשר או לחמניות שמונה או לחמניות עגולות. מה שתרצו.</li>
-  <li>מכסים את הלחמניות עם מגבת או ניילון ומניחים להן לתפוח במשך שעה ורבע (בחורף) או 40 דקות (בקיץ).</li>
-  <li>מחממים תנור ל-180 מעלות.
-</li>
-  <li> מברישים את הלחמניות בביצה מהולה במים ומפזרים מלח גס.</li>
-  
-  <li>אופים במשך 20 דקות או עד שהלחמניות זהובות.</li>
-  <li>בינתיים מערבבים בקערה שמן זית/חמאה עם אבקת שום ועירית או פטרוזיליה קצוצים דק,
- מיד כשהלחמניות יוצאות מהתנור מברישים אותן בשמן המתובל ומאפשרים להן להתקרר לפני שזוללים.
+        <h2>רכיבים</h2>
+        <ul>
+            <li>500 גרם קמח לבן</li>
+            <li>כף שמרים יבשים</li>
+            <li>3 כפות סוכר</li>
+            <li>1 1\4 כוס מים</li>
+            <li>30 גרם שמן זית</li>
+            <li>כף מלח</li>
+            <h2>לקונפי שום</h2>
 
-</li>
-  <li>בתיאבון!</li>
-  <img src=bread%202.jpg
-</ol> 
-<img src=bread.jpg
-</body>
-</html>
+            <li>8-10 שיני שום קלופות</li>
+            <li>חצי כוס שמן זית</li>
+            <li>כמה עלי טימין או רוזמרין</li>
+        </ul>
+        <h2>שלבי ההכנה</h2>
+        <img src=bread%203.jpg>
+        <ol>
+
+            <li> מכינים קונפי שום: בסיר קטן שמים שמן זית, שיני שום ורוזמרין או טימין ומבשלים על אש קטנה (אבל הכי קטנה) עד שהשום מתרכך לגמרי אבל לא מזהיב מטיגון, זה לא אמור להיות טיגון אלא בישול על אש קטנטנה. מצננים לטמפרטורת החדר.</li>
+            <li> בקערת מיקסר עם וו לישה מניחים את כל מצרכי הבצק פרט למלח, מערבלים על מהירות איטית במשך 5 דקות. מוסיפים את המלח ואת שיני השום שהתקררו וממשיכים ללוש את הבצק עוד 5-7 דקות. זה בסדר אם הבצק יוצא דביק. </li>
+            <li>מכסים במגבת ומתפיחים שעה בחוץ או למשך הלילה במקרר (עדיף להתפיח במקרר כי הבצק מעט דביק אבל אפשר לעבוד איתו גם אחרי התפחה בחוץ).</li>
+            <li>מחלקים את הבצק ל-12 עד 16 חתיכות שוות במשקלן, תלוי באיזה גודל אתם רוצים את הלחמניות. משטחים כל כדור בצק על שיש משומן מעט ומגלגלים למעין רולדה. מרדדים את הרולדה לרצועה שמנמנה ומניחים על תבנית עם נייר אפייה. אם רוצים, אפשר ליצור רצועה דקה יותר (ואז עדיף לקמח את הבצק ולא לשמן) ואיתה להכין לחמניות קשר או לחמניות שמונה או לחמניות עגולות. מה שתרצו.</li>
+            <li>מכסים את הלחמניות עם מגבת או ניילון ומניחים להן לתפוח במשך שעה ורבע (בחורף) או 40 דקות (בקיץ).</li>
+            <li>מחממים תנור ל-180 מעלות.
+            </li>
+            <li> מברישים את הלחמניות בביצה מהולה במים ומפזרים מלח גס.</li>
+
+            <li>אופים במשך 20 דקות או עד שהלחמניות זהובות.</li>
+            <li>בינתיים מערבבים בקערה שמן זית/חמאה עם אבקת שום ועירית או פטרוזיליה קצוצים דק,
+                מיד כשהלחמניות יוצאות מהתנור מברישים אותן בשמן המתובל ומאפשרים להן להתקרר לפני שזוללים
+
+            </li>
+        </ol>
+        <img src=bread%202.jpg>
+        <img src=bread.jpg>
+    </div>
+
+</body></html>
