--- a/eden1.html
+++ b/eden1.html
@@ -47,6 +47,13 @@
         </ol>
         <img src=bread%202.jpg>
         <img src=bread.jpg>
+        <div class="cta">
+        <h3>ספר מתכונים חדש</h3>
+        <p>הספר החדש שלי! תמצאו שם מתכונים חדשים שלא מופיעים בבלוג ועוד הפתעות</p>
+        <a class= "button href="https://www.keter-books.co.il/%D7%90%D7%96-%D7%9E%D7%94-%D7%90%D7%AA-%D7%A2%D7%95%D7%A9%D7%94-%D7%9B%D7%9C-%D7%94%D7%99%D7%95%D7%9D">לרכישה</a>
+        </div>
+
     </div>
+
 
 </body></html>
