--- a/eden1.html
+++ b/eden1.html
@@ -12,7 +12,7 @@
         <h1>לחמניות שום רכות</h1>
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
-        <h2>רכיבים</h2>
+        <h3>רכיבים</h3>
         <ul>
             <li>500 גרם קמח לבן</li>
             <li>כף שמרים יבשים</li>
@@ -20,13 +20,13 @@
             <li>1 1\4 כוס מים</li>
             <li>30 גרם שמן זית</li>
             <li>כף מלח</li>
-            <h2>לקונפי שום</h2>
+            <h3>לקונפי שום</h3>
 
             <li>8-10 שיני שום קלופות</li>
             <li>חצי כוס שמן זית</li>
             <li>כמה עלי טימין או רוזמרין</li>
         </ul>
-        <h2>שלבי ההכנה</h2>
+        <h3>שלבי ההכנה</h3>
         <img src=bread%203.jpg>
         <ol>
 
@@ -50,7 +50,7 @@
         <div class="cta">
         <h3>ספר מתכונים חדש</h3>
         <p>הספר החדש שלי! תמצאו שם מתכונים חדשים שלא מופיעים בבלוג ועוד הפתעות</p>
-        <a class= "button href="https://www.keter-books.co.il/%D7%90%D7%96-%D7%9E%D7%94-%D7%90%D7%AA-%D7%A2%D7%95%D7%A9%D7%94-%D7%9B%D7%9C-%D7%94%D7%99%D7%95%D7%9D">לרכישה</a>
+        <a class= "button" href="https://www.keter-books.co.il/%D7%90%D7%96-%D7%9E%D7%94-%D7%90%D7%AA-%D7%A2%D7%95%D7%A9%D7%94-%D7%9B%D7%9C-%D7%94%D7%99%D7%95%D7%9D">לרכישה</a>
         </div>
 
     </div>
