--- a/eden1.html
+++ b/eden1.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>לחמניות שום רכות</h1>
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-
+ <img src="img/bread.jpg" alt="" class="alignleft" max-width:40%>
         <h3>רכיבים</h3>
         <ul>
             <li>500 גרם קמח לבן</li>
@@ -27,7 +27,7 @@
             <li>כמה עלי טימין או רוזמרין</li>
         </ul>
         <h3>שלבי ההכנה</h3>
-        <img src=bread%203.jpg>
+        <img src="img/bread%202.jpg"bread%203.jpg>
         <ol>
 
             <li> מכינים קונפי שום: בסיר קטן שמים שמן זית, שיני שום ורוזמרין או טימין ומבשלים על אש קטנה (אבל הכי קטנה) עד שהשום מתרכך לגמרי אבל לא מזהיב מטיגון, זה לא אמור להיות טיגון אלא בישול על אש קטנטנה. מצננים לטמפרטורת החדר.</li>
@@ -45,9 +45,10 @@
 
             </li>
         </ol>
-        <img src=bread%202.jpg>
-        <img src=bread.jpg>
+        <img src="img/bread%203.jpg">
         <div class="cta">
+        <img src="img/book.jpg" alt="" class="alignleft">
+
         <h3>ספר מתכונים חדש</h3>
         <p>הספר החדש שלי! תמצאו שם מתכונים חדשים שלא מופיעים בבלוג ועוד הפתעות</p>
         <a class= "button" href="https://www.keter-books.co.il/%D7%90%D7%96-%D7%9E%D7%94-%D7%90%D7%AA-%D7%A2%D7%95%D7%A9%D7%94-%D7%9B%D7%9C-%D7%94%D7%99%D7%95%D7%9D">לרכישה</a>
